--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,8 +5,11 @@ jobs:
     name: Upload
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@master
-    - name: Upload
+    - name: Checkout the repository
+      uses: actions/checkout@master
+    - name: Generate the artifacts
+      uses: skx/github-action-build@master
+    - name: Upload the artifacts
       uses: skx/github-action-publish-binaries@master
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
