Use BoltDB to store feed-state
This pull-request largely neuters the use of ~/.rss2email/state,
instead storing state of the feed-items inside a BoltDB database.

The migration here is seamless:

* When a feed is fetched we get a list of items.
* We look to see if the item is new, in the legacy database OR the new
  one.
  * If the item is new we record it ONLY in boltdb.
  * THen we remove the legacy state-file.

The end result is that legacy state-files will be cleaned up,
and removed and all state will end up in BoltDB.

The BoltDB file will continue to grow, as that is not yet pruned,
but that will be an easy change to make in the future.

As part of this we've also disabled CGO, and generated binaries
for all platforms.

This would close #82, when merged.

--- a/.github/build
+++ b/.github/build
@@ -6,8 +6,8 @@ BASE="rss2email"
 #
 # We build on only a single platform/arch.
 #
-BUILD_PLATFORMS="linux"
-BUILD_ARCHS="amd64"
+BUILD_PLATFORMS="linux darwin freebsd"
+BUILD_ARCHS="amd64 386"
 
 # For each platform
 for OS in ${BUILD_PLATFORMS[@]}; do
@@ -35,7 +35,7 @@ for OS in ${BUILD_PLATFORMS[@]}; do
         # Run the build
         export GOARCH=${ARCH}
         export GOOS=${OS}
-        export CGO_ENABLED=1
+        export CGO_ENABLED=0
 
         go build -ldflags "-X main.version=$(git describe --tags)" -o "${BASE}-${SUFFIX}"
 
